--- a/pom.xml
+++ b/pom.xml
@@ -63,7 +63,15 @@
             <artifactId>jakarta.persistence-api</artifactId>
             <version>2.2.3</version>
         </dependency>
-    </dependencies>
+
+
+		<dependency>
+			<groupId>javax.validation</groupId>
+			<artifactId>validation-api</artifactId>
+		</dependency>
+
+
+	</dependencies>
 
 	<build>
 		<plugins>
