--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,26 @@
+server.port=8083
 
-server.port=8082
+# DataSource settings: set here your own configurations for the database
+# connection. In this example we have "netgloo_blog" as database name and
+# "root" as username and password.
+#spring.datasource.url = jdbc:mysql://phpmyadmin.ecs.westminster.ac.uk:3306/w1656792_0
+spring.datasource.url = jdbc:mysql://localhost:3306/user2?useSSL=false
+spring.datasource.username = anu22
+spring.datasource.password = Globalnet11223344
+
+# Keep the connection alive if idle for a long time (needed in production)
+spring.datasource.testWhileIdle = true
+spring.datasource.validationQuery = SELECT 1
+
+# Show or not log for each sql query
+spring.jpa.show-sql = true
+spring.jpa.properties.hibernate.format_sql=true
+# Hibernate ddl auto (create, create-drop, update)
+spring.jpa.hibernate.ddl-auto = create-drop
+
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+# The SQL dialect makes Hibernate generate better SQL for the chosen database
+#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL55Dialect
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
