--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,7 +16,7 @@ spring.datasource.validationQuery = SELECT 1
 spring.jpa.show-sql = true
 spring.jpa.properties.hibernate.format_sql=true
 # Hibernate ddl auto (create, create-drop, update)
-spring.jpa.hibernate.ddl-auto = create-drop
+spring.jpa.hibernate.ddl-auto = update
 
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
